# guile18_androidmsvc

./: CMakeLists.txt  COPYING.LESSER  ChangeLog-2008  NEWS  README.md  configure.in  libguile.h  libguile.hpp  pre-inst-guile-env.in  resources.qrc.in  test.cpp
.github/workflows/: cmake.yml
cmake/: AutotoolCheck.cmake  config.h.cmake  guile_liza-config.cmake.in
cmake/libguile/: libpath.h.cmake  version.h.cmake
debian/patches/: 0003-Fix-the-SRFI-60-copy-bit-documentation.patch  0005-Don-t-access-uninitialised-memory-in-scm_to_sockaddr.patch
doc/: CMakeLists.txt  oldfmt.c
doc/ref/: api-data.texi  api-scheduling.texi  gh.texi
doc/tutorial/: guile-tut.texi
examples/compat/: compat.h
guile-config/: guile-config.in  guile.m4
ice-9/: and-let-star.scm  boot-9.scm  buffered-input.scm  calling.scm  channel.scm  common-list.scm  debug.scm  debugger.scm  deprecated.scm  documentation.scm  emacs.scm  expect.scm  ftw.scm  gap-buffer.scm  gds-server.scm  getopt-long.scm  hcons.scm  history.scm  lineio.scm  list.scm  ls.scm  mapping.scm  match.scm  networking.scm  null.scm  occam-channel.scm  optargs.scm  poe.scm  popen.scm  posix.scm  pretty-print.scm  psyntax.ss  q.scm  r4rs.scm  r5rs.scm  rdelim.scm  receive.scm  regex.scm  runq.scm  rw.scm  (+13 more)
ice-9/debugger/: command-loop.scm  commands.scm  state.scm  trc.scm
ice-9/debugging/: steps.scm  trace.scm  traps.scm  trc.scm
libguile/: ChangeLog-2000  ChangeLog-2008  ChangeLog-scm  Makefile.am  __scm.h  _scm.h  alist.c  alist.h  alist.x  alloca.c  arbiters.c  arbiters.h  arbiters.x  async.c  async.h  async.x  backtrace.c  backtrace.h  backtrace.x  boolean.c  boolean.h  boolean.x  c-tokenize.lex  chars.c  chars.h  chars.x  continuations.c  continuations.h  continuations.x  conv-integer.i.c  conv-uinteger.i.c  convert.c  convert.h  convert.i.c  coop-pthreads.c  coop-pthreads.h  coop.c  debug-malloc.c  debug-malloc.h  debug.c  (+284 more)
mini-gmp/: mini-gmp.c  mini-gmp.h
oop/: goops.scm
oop/goops/: active-slot.scm  compile.scm  composite-slot.scm  describe.scm  dispatch.scm  internal.scm  old-define-method.scm  save.scm  simple.scm  stklos.scm  util.scm
qguile/: CMakeLists.txt  GuileInterpreter.pro  MainWindow.h  main.cpp  qtdeploy.json.in  resources.qrc.in
qguile/android/: AndroidManifest.xml
qguile/android/res/drawable/: splashscreen.xml
qguile/android/res/values/: libs.xml
qt/: meas.c
qt/md/: arm.h  axp.h  hppa.h  i386.h  ksr1.h  m88k.h  mips.h  sparc.h  vax.h
srfi/: srfi-1.c  srfi-1.h  srfi-1.scm  srfi-10.scm  srfi-11.scm  srfi-13.c  srfi-13.h  srfi-13.scm  srfi-14.c  srfi-14.h  srfi-14.scm  srfi-16.scm  srfi-17.scm  srfi-19.scm  srfi-2.scm  srfi-26.scm  srfi-31.scm  srfi-34.scm  srfi-35.scm  srfi-37.scm  srfi-39.scm  srfi-4.c  srfi-4.h  srfi-4.scm  srfi-6.scm  srfi-60.c  srfi-60.h  srfi-60.scm  srfi-69.scm  srfi-8.scm  srfi-88.scm  srfi-9.scm
test-suite/: guile-test  lib.scm  test-asmobs-lib.c  test-asmobs-lib.x
test-suite/standalone/: test-asmobs-lib.c  test-conversion.c  test-gh.c  test-list.c  test-num2integral.c  test-require-extension  test-round.c  test-scm-c-read.c  test-scm-take-locale-symbol.c  test-scm-with-guile.c  test-system-cmds  test-unwind.c  test-with-guile-module.c
test-suite/tests/: alist.test  arbiters.test  bit-operations.test  c-api.test  common-list.test  elisp.test  environments.test  eval.test  exceptions.test  filesys.test  ftw.test  gc.test  hash.test  hooks.test  import.test  interp.test  list.test  modules.test  numbers.test  poe.test  popen.test  q.test  r4rs.test  r5rs_pitfall.test  ramap.test  reader.test  socket.test  srcprop.test  srfi-10.test  srfi-31.test  unif.test  weaks.test
test-suite/tests/c-api/: testlib.c
tools/: guile-config  guile-snarf  guile-tools
